--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
-
+  <div class="container">
+    <h1 id="h1">Click Me</h1>
+  </div>
 
     <script src="js/main.js"></script>
 </body>
