--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
 </head>
 <body>
   <div class="container">
-    <h1 id="h1">Click Me</h1>
+    <form class="form">
+      First name:<br>
+      <input class="input" type="text" name="firstname">
+      <br>
+      Last name:<br>
+      <input class="input" type="text" name="lastname">
+      <br>
+      Email:<br>
+      <input class="input" type="text" name="email">
+      <br>
+      Message:<br>
+      <textarea class="input" rows="4" name="message"></textarea>
+      <br>
+      <input id="submit" class="submit" type="submit" value="Submit">
+    </form>
+
   </div>
 
     <script src="js/main.js"></script>
