--- a/index.html
+++ b/index.html
@@ -9,24 +9,11 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <div class="container">
-    <form class="form">
-      First name:<br>
-      <input class="input" type="text" name="firstname">
-      <br>
-      Last name:<br>
-      <input class="input" type="text" name="lastname">
-      <br>
-      Email:<br>
-      <input class="input" type="text" name="email">
-      <br>
-      Message:<br>
-      <textarea class="input" rows="4" name="message"></textarea>
-      <br>
-      <input id="submit" class="submit" type="submit" value="Submit">
-    </form>
-
-  </div>
+  <h1 id="heading"> This is where it all starts. </h1>
+  <h2> Then we learn a little more. </h2>
+  <p id="paragraph"> This is everything we need to know. </p>
+  <div id="circle" class="circle"></div>
+  <h3> That's a circle!</h3>
 
     <script src="js/main.js"></script>
 </body>
